--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ h3 {
 }
 
 body {
-    background-image: 'skin-funkin-cardbordtoast.jpg';
+    background-image: skin-funkin-cardbordtoast.jpg;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
